tests/pass/nested_calls.tc
int inc(int x) {
  return x + 1;
}

int twice(int x) {
  return x * 2;
}

int main() {
  return 1 + inc(twice(3));
}
