tests/fail/duplicate_param.tc
int sum(int x, int x) {
  return x;
}

int main() {
  return sum(1, 2);
}
